Fix bug causing age to be wider than decice width on mobile

--- a/assets/stylesheets/index.sass
+++ b/assets/stylesheets/index.sass
@@ -4,6 +4,11 @@ $white: #FFFFFF
 $black: #000000
 $red: #D0021B
 
+//*
+    border-style: solid
+    border-width: 1px
+
+
 html, body
     margin: 0
     padding: 0
@@ -20,7 +25,7 @@ a
 .cta-button
     background-color: white
     height: 50px
-    width: 135px
+    width: 125px
     display: flex
     align-items: center
     justify-content: center
@@ -41,10 +46,11 @@ a
             width: 100%
             object-fit: cover
             //object-position: 50% 0%
-            text-align: center
             filter: brightness(50%)
             //overflow: hidden
             z-index: -1
+            top: 0
+            left: 0
         h1, h2
             text-align: center
             margin: 0 auto
@@ -145,7 +151,7 @@ a
             padding-top: 20px
             margin-bottom: 5px
         iframe
-            width: 99vw
+            width: 100vw
         #dont-miss
             padding-bottom: 35px
             margin-bottom: 0px
